# RC522-interface-with-nrf52

./: CMakeLists.txt  README.md  nrf52832_charger.overlay  prj.conf
boards/arm/nrf52832_charger/: Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  nrf52832_charger-pinctrl.dtsi  nrf52832_charger.dts  nrf52832_charger.yaml  nrf52832_charger_defconfig
components/adc_services/: adc_service.c  adc_service.h
components/app_UI/: app_ui.c  app_ui.h  json_parser.c  json_parser.h
components/app_db/: app_db.c  app_db.h
components/app_schedule/: app_schedule.c  app_schedule.h
components/app_timer/: app_timer.c  app_timer.h
components/cp_pwm/: cp_pwm.c  cp_pwm.h  pwm_handler.c  pwm_handler.h
components/eeprom_m24m02/: eeprom_m24m02.c  eeprom_m24m02.h
components/general/: general.c  general.h
components/gpio_config/: gpio_config.c  gpio_config.h
components/i2c_services/: i2c_service.c  i2c_service.h
components/ioExp_mcp23s17/: ioExp_mcp23s17.c  ioExp_mcp23s17.h
components/led_handler/: led_handler.c  led_handler.h
components/meter_ade7593/: ade7593.c  ade7593.h
components/oled_ssd1306/: font10x16.c  font15x24.c  font20x32.c  font5x7.c  font8x8.c  ssd1306.c  ssd1306.h
components/rc522/: rc522.c  rc522.h
components/rtc_mcp79400/: external_rtc.c  external_rtc.h  gw_rtc.c  gw_rtc.h  rtc_utility.c  rtc_utility.h
components/temp_reading/: temp.c  temp.h
components/volt_curr_monitor/: volt_curr_monitor.c  volt_curr_monitor.h
dts/bindings/: input.yaml  output.yaml
src/: main.c
